fix image in about me and strong tag in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,9 @@
   li {
     @apply text-zinc-700 dark:text-zinc-200;
   }
+  strong {
+    @apply text-zinc-700 dark:text-zinc-200;
+  }
 }
 
 .video-wrapper {
